--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule: 
+    - cron: "* 12 * * *"
 
 jobs:
   Run-npm-on-Ubuntu:
