--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         shell: pwsh
         run: |
           $User = ${{ secrets.client_id }}
-          $PWord = ConvertTo-SecureString -String (${{ secrets.client_secret }}) -AsPlainText -Force
+          $PWord = ${{ secrets.client_secret }}
           $tenant = ${{ secrets.tenant_id }}
           $Credential = New-Object -TypeName "System.Management.Automation.PSCredential" -ArgumentList $User,$PWord
           Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
