--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
     branches: [ main ]
   schedule: 
     - cron: "* 12 * * *"
+env:
+  AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+  AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
   
 jobs:
   Run-npm-on-Ubuntu:
@@ -26,7 +30,7 @@ jobs:
       - name: Install CLI
         shell: pwsh
         run: |
-          Invoke-WebRequest -Uri https://aka.ms/installazurecliwindows -OutFile .\AzureCLI.msi; Start-Process msiexec.exe -Wait -ArgumentList '/I AzureCLI.msi /quiet'; Remove-Item .\AzureCLI.msi
+          #Invoke-WebRequest -Uri https://aka.ms/installazurecliwindows -OutFile .\AzureCLI.msi; Start-Process msiexec.exe -Wait -ArgumentList '/I AzureCLI.msi /quiet'; Remove-Item .\AzureCLI.msi
           Write-Output "overall"
       - name: install communication services module
         shell: pwsh
@@ -37,9 +41,9 @@ jobs:
       - name: connect to SPN
         shell: pwsh
         run: |
-          $User = ${{ secrets.CLIENT_ID }}
-          $PWord = ${{ secrets.CLIENT_SECRET }}
-          $tenant = ${{ secrets.TENANT_ID }}
+          $User = $env:CLIENT_ID
+          $PWord = $env:CLIENT_SECRET
+          $tenant = $env:TENANT_ID
           $Credential = New-Object -TypeName "System.Management.Automation.PSCredential" -ArgumentList $User,$PWord
           Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
       - name: Send Email
