--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,11 @@ jobs:
         shell: pwsh
         run: |
           $User = $env:CLIENT_ID
-          write-host "($env:CLIENT_ID)"
           $PWord = $env:CLIENT_SECRET
-          write-host "($env:CLIENT_SECRET)"
           $tenant = $env:TENANT_ID
-          write-host "($env:TENANT_ID)"
-          $Credential = New-Object -ArgumentList $User,$PWord -TypeName "System.Management.Automation.PSCredential"
-          Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
+          #$Credential = New-Object -ArgumentList $User,$PWord -TypeName "System.Management.Automation.PSCredential"
+          #Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
+          az login --service-principal -u $User -p $PWord --tenant $tenant
       - name: Send Email
         shell: pwsh
         run: |
