--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,16 @@ jobs:
     name: Run PSScriptAnalyzer on Windows
     runs-on: windows-latest
     steps:
-      - name: Log in with Azure
-        uses: azure/login@v1
-        with:
-          Creds: '${{ secrets.AZURE_CREDENTIALS }}'
-      - uses: actions/checkout@v3
       - name: Install CLI
         shell: pwsh
         run: |
           #Invoke-WebRequest -Uri https://aka.ms/installazurecliwindows -OutFile .\AzureCLI.msi; Start-Process msiexec.exe -Wait -ArgumentList '/I AzureCLI.msi /quiet'; Remove-Item .\AzureCLI.msi
           Write-Output "overall"
+      - name: Log in with Azure
+        uses: azure/login@v1
+        with:
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          enable-AzPSSession: true
       - name: install communication services module
         shell: pwsh
         run: |
