--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,10 @@ on:
   schedule: 
     - cron: "* 12 * * *"
 env:
-  AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
-  AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-  AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+  TENANT_ID: ${{ secrets.TENANT_ID }}
+  CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+  AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS  }}
   
 jobs:
   Run-npm-on-Ubuntu:
@@ -34,7 +35,7 @@ jobs:
       - name: Log in with Azure
         uses: azure/login@v1
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          creds: $env:AZURE_CREDENTIALS
           enable-AzPSSession: true
       - name: install communication services module
         shell: pwsh
