--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
           $User = $env:CLIENT_ID
           $PWord = $env:CLIENT_SECRET
           $tenant = $env:TENANT_ID
-          $Credential = New-Object -ArgumentList $User,$PWord -TypeName "System.Management.Automation.PSCredential"
-          Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
-          #az login --service-principal -u $User -p $PWord --tenant $tenant
+          #$Credential = New-Object -ArgumentList $User,$PWord -TypeName "System.Management.Automation.PSCredential"
+          #Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
+          az login --service-principal -u $User -p $PWord --tenant $tenant
       - name: Send Email
         shell: pwsh
         run: |
