--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,44 @@ jobs:
           #$Credential = New-Object -ArgumentList $User,$PWord -TypeName "System.Management.Automation.PSCredential"
           #Connect-AzAccount -Credential $Credential -Tenant $tenant -ServicePrincipal
           az login --service-principal -u $User -p $PWord --tenant $tenant
+      - name: query
+        shell: pwsh
+        run: |
+          $kqreboot = 'HealthResources
+          | where type == "microsoft.resourcehealth/resourceannotations"
+          | summarize count() by tostring(properties.reason)'
+          $query_count = (Search-AzGraph -Query $kqreboot)
+          $query_count
+
+          $test = 'HealthResources
+                 | where type == "microsoft.resourcehealth/resourceannotations"
+                 | project SubscriptionName=name, subscriptionId, resourceGroup, VmName=trim("\"]", substring(split(properties.targetResourceId, "/", 8),2)), properties.occurredTime, properties.annotationName, properties.category, properties.summary, properties.context, properties.reason'
+
+          $detailed = (Search-AzGraph -Query $test | Out-String)
+          $detailed
+
+
+          $Live_Migration = 'HealthResources
+          | where type == "microsoft.resourcehealth/resourceannotations"
+          | where  properties.reason == "Live Migration"
+          | project SubscriptionName=name, subscriptionId, resourceGroup, VmName=trim("\"]", substring(split(properties.targetResourceId, "/", 8),2)), properties.occurredTime, properties.annotationName, properties.category, properties.summary, properties.context, properties.reason'
+          $Live_Migration_Query = Search-AzGraph -Query $Live_Migration
+          $Live_Migration_Query
+
+
+          $Failure = 'HealthResources
+          | where type == "microsoft.resourcehealth/resourceannotations"
+          | where  properties.reason == "Redeploying due to host failure"
+          | project SubscriptionName=name, subscriptionId, resourceGroup, VmName=trim("\"]", substring(split(properties.targetResourceId, "/", 8),2)), properties.occurredTime, properties.annotationName, properties.category, properties.summary, properties.context, properties.reason'
+          $Failure_Query = Search-AzGraph -Query $Failure
+          $Failure_Query
+
+          $detailed = $Failure_Query + $Live_Migration_Query
+
+          $style = "<style>BODY{font:arial 10pt;}</style>"
+
+          $combined = (write-output $query_count + $Live_Migration_Query + $Failure_Query| ConvertTo-Html -Body $style | Out-String)# + (write-output $Live_Migration_Query | ConvertTo-Html -Body $style | Out-String) + (write-output $Failure_Query | ConvertTo-Html -Body $style | Out-String)
+          $combined
       - name: Send Email
         shell: pwsh
         run: |
@@ -56,9 +94,5 @@ jobs:
           $subject = "Welcome to Azure Communication Services Email"
           $text = "test"
           az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --text "($text)"
-      - name: Log in with Azure
-        uses: azure/login@v1
-        with:
-          creds: $env:AZURE_CREDENTIALS
-          enable-AzPSSession: true
+
           
