--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           az config set extension.use_dynamic_install=yes_without_prompt
           Install-Module Az.Communication
+          Install-Module Az.ResourceGraph
           #Import-Module Az.Communication
       - name: connect to SPN
         shell: pwsh
