--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
           $sender = "DoNotReply@ad2873a6-3d24-45e2-8e26-5f80ef712436.azurecomm.net"
           $receiver = "martin.lee@nutrien.com"
           $subject = "Welcome to Azure Communication Services Email"
-          $text = "test"
+          $text = $combined
           az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --text "($text)"
 
           
