--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,8 @@ jobs:
 
           $detailed = (Search-AzGraph -Query $test | Out-String)
           $detailed
+          $detailed_html = $detailed | ConvertTo-Html -Fragment
+          $detailed_html
 
           $Live_Migration = 'HealthResources
           | where type == "microsoft.resourcehealth/resourceannotations"
@@ -98,7 +100,7 @@ jobs:
           $receiver = "martin.lee@nutrien.com"
           $subject = "Welcome to Azure Communication Services Email"
           $text = $combined
-          az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --html "'$query_count_html + $combined_html'"
+          az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --html "'$query_count_html + $detailed_html'"
 
 
           
