--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,9 @@ jobs:
           $query_count_html
           
           $test = 'HealthResources
-                 | where type == "microsoft.resourcehealth/resourceannotations"
-                 | project SubscriptionName=name, subscriptionId, resourceGroup, VmName=trim("\"]", substring(split(properties.targetResourceId, "/", 8),2)), properties.occurredTime, properties.annotationName, properties.category, properties.summary, properties.context, properties.reason'
-          $detailed = (Search-AzGraph -Query $test | Out-String)
+           | where type == "microsoft.resourcehealth/resourceannotations"
+           | project SubscriptionName=name, subscriptionId, resourceGroup, VmName=trim("\"]", substring(split(properties.targetResourceId, "/", 8),2)), properties.occurredTime, properties.annotationName, properties.category, properties.summary, properties.context, properties.reason'
+          $detailed = (Search-AzGraph -Query $test)
           $detailed
           $detailed_html = $detailed | ConvertTo-Html -Fragment
 
