--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - run: npm help
+      #- run: npm help
 
   Run-PSScript-on-Windows:
     name: Run PSScript on Windows
