--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
           $receiver = "martin.lee@nutrien.com"
           $subject = "Welcome to Azure Communication Services Email"
           $text = $combined
-          az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --html "'$query_count_html + $detailed_html + $combined_html'"
+          az communication email send --connection-string $connection --sender $sender --subject $subject --to $receiver --html "'$query_count_html  $detailed_html  $combined_html'"
 
 
           
